# copilot-telegram-bot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SUBMISSION.md  copilot_service.py  main.py  pyproject.toml  test_auth.py  ux_utils.py
.github/workflows/: test.yml
docs/: copilot-sdk-v1-upgrade-background.md
skills/code-review/: SKILL.md
src/: config.py  main.py
src/core/: agents.py  context.py  events.py  filesystem.py  git.py  service.py  session.py  session_metadata.py  tools.py  usage.py
src/handlers/: callbacks.py  commands.py  messages.py  plan.prompt.md  utils.py
src/ui/: formatters.py  menus.py  session_exporter.py  streamer.py
tests/: conftest.py
tests/integration/: test_agent_command.py  test_handler_callbacks.py  test_handler_commands.py  test_handler_messages.py
tests/security/: test_path_validation.py  test_permissions.py
tests/unit/core/: test_context.py  test_events.py  test_filesystem.py  test_git.py  test_service_mode_agent.py  test_session.py  test_tools.py  test_usage.py
tests/unit/handlers/: test_commands_new.py  test_skill_command.py
tests/unit/ui/: test_formatters.py  test_menus_agent.py  test_menus_commands.py  test_menus_selection.py  test_menus_session.py  test_session_exporter.py  test_streamer.py
